--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -56,7 +56,7 @@
 
 \authorrunning{A. Allen et al.}%optional
 
-\subjclass{Dummy classification: please check \url{http://www.acm.org/about/class/ccs98-html}. Cite, for example, as:  ``B.3.3 Performance Analysis and Design Aids, C.1.2 Multiple Data Stream Architectures (Multiprocessors)''}% mandatory: Please choose ACM 1998 classifications from http://www.acm.org/about/class/ccs98-html . \eg cite as "F.1.1 Models of Computation". 
+\subjclass{Dummy classification: please check \url{http://www.acm.org/about/class/ccs98-html}. Cite, for example, as:  ``B.3.3 Performance Analysis and Design Aids, C.1.2 Multiple Data Stream Architectures (Multiprocessors)''}% mandatory: Please choose ACM 1998 classifications from http://www.acm.org/about/class/ccs98-html . \eg cite as "F.1.1 Models of Computation".
 \keywords{Dummy keywords: Please provide 1--5 keywords}% mandatory: Please provide 1-5 keywords
 
 \seminarnumber{10101}
@@ -105,7 +105,7 @@ The manifesto is expressed in terms of a series of actionable ``pledges'' that u
 %}
 %\license
 
-Although the role of software is becoming increasingly important in diverse fields of research, it is commonly not given due recognition. Software is often not cited, or even considered to be citable. Developers of research software are not given due credit. In cases where software embodies a core intellectual contribution of research, its creators may not be invited as co-authors on papers disseminating that research. In cases where software that enabled research can be cited, it may not be. 
+Although the role of software is becoming increasingly important in diverse fields of research, it is commonly not given due recognition. Software is often not cited, or even considered to be citable. Developers of research software are not given due credit. In cases where software embodies a core intellectual contribution of research, its creators may not be invited as co-authors on papers disseminating that research. In cases where software that enabled research can be cited, it may not be.
 %\katznote{I'm don't think that developers of research software should always be invited as co-authors on papers disseminating the research that their software enabled. It depends on if the research software was developed for that research, or if was developed for something else and just used for that research.  In the former case, perhaps they should be co-authors.  In the latter, their software should be cited, but they should probably not be co-authors.} \kt{I changed the wording of this paragraph in an attempt to more precisely articulate this distinction.} \katznote{great!}
 This Dagstuhl Perspectives Workshop
 explored the \emph{current state} of engineering of academic research software,
@@ -119,7 +119,7 @@ The personal pledges expressed in this Dagstuhl Manifesto\footnote{Dagstuhl Pers
 (ii) promoting the \emph{careers} of research software engineers who develop academic software;
 and
 (iii) ensuring the quality and sustainability of software during its \emph{development}:
-\bc{qu: only during? or also possibly after (i.e. thorough the whole lifecycle, incl. how to set up / organize the maintenance, evolution...) ?} 
+\bc{qu: only during? or also possibly after (i.e. thorough the whole lifecycle, incl. how to set up / organize the maintenance, evolution...) ?}
 \on{I would say that there is no "after" until the software is dead. Development these days is understood to include the whole lifecycle, I believe.} \katznote{If I was writing this from scratch, I would say `development and maintenance'.  I don't think development does include the whole lifecycle, and we should include it.  We could also say `during its \emph{development} and complete lifecycle'.}
 
 % ----------
@@ -151,15 +151,15 @@ and
 \section{Introduction}
 
 %\on{NB: adapted from the proposal}
-\emph{Academia is software driven.} As software is becoming a pervasive technology for automating and innovating every aspect of the human condition (work, play, love and war), it is also embedded firmly in the academic world. On the one hand, in computer science, and in software engineering research in particular we see experimental software and toolkits emerge continuously, either as part of the \emph{output} of research effort, or as part of the \emph{research method}. On the other hand, in general it may be that software is used even more actively in other fields of research such as mathematics, biology, particle physics, astronomy, medicine, and law. Here too, we can distinguish software that is part of the output (\ie development of innovative production techniques) from software that contributes to the research methods. 
+\emph{Academia is software driven.} As software is becoming a pervasive technology for automating and innovating every aspect of the human condition (work, play, love and war), it is also embedded firmly in the academic world. On the one hand, in computer science, and in software engineering research in particular we see experimental software and toolkits emerge continuously, either as part of the \emph{output} of research effort, or as part of the \emph{research method}. On the other hand, in general it may be that software is used even more actively in other fields of research such as mathematics, biology, particle physics, astronomy, medicine, and law. Here too, we can distinguish software that is part of the output (\ie development of innovative production techniques) from software that contributes to the research methods.
 
 There is an explosion of available open-data online which is accessed and analysed through the creation of new software --- generating more data to analyse. We focus on the \emph{sustainability} of this software, \ie any software that acquires, cleanses, stores, annotates, transforms, filters, generates (\etc) research data.
-By ``sustainability'' we mean the \emph{capacity to endure}. We define software as sustainable if it will continue to be available in the future, on new platforms, and meeting new needs. 
+By ``sustainability'' we mean the \emph{capacity to endure}. We define software as sustainable if it will continue to be available in the future, on new platforms, and meeting new needs.
 %\katznote{Did we come up with this definition?  If not, we should cite where we got it from.  Actually, I see I might have said it - it's from slide 23 of \url{http://www.slideshare.net/danielskatz/scientific-software-challenges-and-community-responses}, though I don't know if made it up or took it from somewhere else and forgot to cite it} \on{Yes, I took it from you. Shall we say, ``We define software to be sustainable ...''?} \katznote{I've done so - please remove this comment if you think this is ok.}
 
 
-The perspective of this workshop is that of \emph{the research team developing and/or using academic software.} 
-A key role is that of the \emph{research software engineer}\footnote{Depending on the community, other terms may be used for this role, such as ``scientific IT support staff'', ``cyberinfrastructure concierge'',  or ``research infrastructure engineer.'' In addition, this role may be functionally filled by faculty or students with appropriate expertise.} (RSE), the person with expertise both in academic research, and in the software engineering tools and technology needed to build the software used in the research, and to make it sustainable. 
+The perspective of this workshop is that of \emph{the research team developing and/or using academic software.}
+A key role is that of the \emph{research software engineer}\footnote{Depending on the community, other terms may be used for this role, such as ``scientific IT support staff'', ``cyberinfrastructure concierge'',  or ``research infrastructure engineer.'' In addition, this role may be functionally filled by faculty or students with appropriate expertise.} (RSE), the person with expertise both in academic research, and in the software engineering tools and technology needed to build the software used in the research, and to make it sustainable.
 In this context it is critical that the \emph{intellectual contribution of software} be recognized and actively supported.
 
 \katznote{1. While I like the RSE title, I think there are other similar titles, perhaps used in other places, and perhaps we should mention some of them, such as Cyberinfrastructure Concierge, research infrastructure engineer, etc.  2. I think there can be a number of different types of people who have expertise in both the research field and software engineering.  Some of them are faculty.  I feel like RSEs generally have more strength in the SE part and less in the domain, while typical faculty have more in the domain and less in SE, but both can be on different points of the spectrum.}
@@ -178,9 +178,9 @@ As software is becoming integral to our processes, the tools we use, and the out
 Are we certain to be able reproduce previous research methods in the future under arbitrary changes to the technological contexts (machines, operating systems, programming languages frameworks)? Are we able to incrementally adapt research software to emerging opportunities at the same time, without loss of reproducibility and without incurring prohibitive cost?
 \item \emph{Is the software process we use fit for the quality we expect?} How can we optimize it in a unique academic context without losing quality? What tools and processes exist to help with this balance? What investments are necessary to discover it?
 \item \emph{How can we secure academic software quality?} How can we monitor, steer, report on and review academic software quality? How can we manage and secure trust between academic research teams considering software developed for output and or research methods?
-\item \emph{How should we balance domain knowledge and expertise with software engineering knowledge and expertise in an academic research team?} How can we effectively manage heterogeneous research teams where different domains benefit from each other?   
+\item \emph{How should we balance domain knowledge and expertise with software engineering knowledge and expertise in an academic research team?} How can we effectively manage heterogeneous research teams where different domains benefit from each other?
 \item \emph{How can we motivate research teams to invest in academic software}, especially considering the highly competitive and already complex environment they operate in?
-% What are motivators for investment and change for research teams, with respect to the above, considering the highly competitive and already complex environment they operate in? 
+% What are motivators for investment and change for research teams, with respect to the above, considering the highly competitive and already complex environment they operate in?
 What is required in terms of long term funding, education and infra-structure to make the goals of academic software feasible?
 \end{itemize}
 
@@ -235,9 +235,9 @@ This is important in order to raise the bar for transparency in academic work, a
 % http://f1000research.com/articles/3-271/v2
 
 \emph{Contradictions or concerns.}
-Research might use a lot of software, so reference sections could potentially be cluttered with unhelpful citations (\eg citing all of the libraries used by some package). 
-Software evolves over time, so there might be many different citations that dilute its apparent impact. 
-Software can have dynamic authorship, complicating the question of who deserves credit for a particular version. 
+Research might use a lot of software, so reference sections could potentially be cluttered with unhelpful citations (\eg citing all of the libraries used by some package).
+Software evolves over time, so there might be many different citations that dilute its apparent impact.
+Software can have dynamic authorship, complicating the question of who deserves credit for a particular version.
 
 The software that needs to be cited may not be published, making it hard to determine how to cite it.  There may be limits on the numbers of citations permitted by a journal.  There may be a page limit for the text version of the work.  There may not be a clearly defined way to add citations for non-text products, such as software, either in the software itself or in the published metadata (\eg in Zenodo\footnote{\url{http://zenodo.org}} or figshare\footnote{\url{https://figshare.com}}).
 There may be resistance from individual authors, even in the open science community, who believe that noting a URL is enough.%
@@ -246,7 +246,7 @@ There may be resistance from individual authors, even in the open science commun
 \url{https://github.com/scipy-conference/scipy_proceedings/pull/123\#issuecomment-118170251}.\\
 }
 
-Academics whose careers are impacted by their relationships with editors at prestigious journals may worry about annoying those editors. While this is a battle worth fighting for, junior researchers may be anxious about making this stand against more powerful individuals who might misinterpret it. 
+Academics whose careers are impacted by their relationships with editors at prestigious journals may worry about annoying those editors. While this is a battle worth fighting for, junior researchers may be anxious about making this stand against more powerful individuals who might misinterpret it.
 This also increases the effort needed to review papers.  Various models for this have been suggested to reduce this, such as not having all reviewers required to test the software, to having special software reviewers who are assigned to reviewing software but not the full paper.
 
 %Journals may have citation limits or page limits, so that adding software citations have the cost of removing other citations or removing research. \bc{already said earlier in the same part}
@@ -254,22 +254,22 @@ This also increases the effort needed to review papers.  Various models for this
 For new types of scholarly works, for example software itself or data, there are no commonly accepted standard practices for how to publish that work with citations.
 
 \emph{What actions are needed?}
-Require a link to the software (screenshots are not enough!),or provide the relevant citation if it is available. 
+Require a link to the software (screenshots are not enough!),or provide the relevant citation if it is available.
 %
-% Running examples will be helpful as well\bc{is it really related to "citation"?}. 
+% Running examples will be helpful as well\bc{is it really related to "citation"?}.
 
 Reviewers need to take software seriously, and when a piece of software is mentioned, either by name or by description in the body of the work, in the acknowledgements, or in the citations, check to see if it is well-cited.  When software is the published work in question, other software on which it depends should be cited.%
 \footnote{Although it may not be clear how to do so. See:\\ \url{https://danielskatzblog.wordpress.com/2016/03/25/how-should-we-add-citations-inside-software/}.}
 
-Authors need guidance about when to cite software (\ie which software should be cited) and how to cite software (\ie citation formats that will be picked up by citation tracking systems). 
+Authors need guidance about when to cite software (\ie which software should be cited) and how to cite software (\ie citation formats that will be picked up by citation tracking systems).
 
 \emph{Why would those small actions have impact?}
-If software citations add to a scholar's h-index, it can be beneficial for the authors. Readers of a paper seeking to build on the published work will have more concrete information about how the work was done. 
+If software citations add to a scholar's h-index, it can be beneficial for the authors. Readers of a paper seeking to build on the published work will have more concrete information about how the work was done.
 Effort by the reviewers should \emph{trickle up} to journal editors and \emph{trickle down} to research authors.
 By requiring authors to provide these links, we will work towards educating the community to produce reusable software.
-% Or at least, a set of tests that work for the reviewers of the publication. 
+% Or at least, a set of tests that work for the reviewers of the publication.
 
-\emph{Who else needs to act?} Publishers need to agree to citations being included in publications. Software authors need to provide information about how their software should be cited. Citation tracking systems need to include software citations. 
+\emph{Who else needs to act?} Publishers need to agree to citations being included in publications. Software authors need to provide information about how their software should be cited. Citation tracking systems need to include software citations.
 Editors and authors too will need to begin to hold their colleagues to this standard in order for this to become a community norm.
 Conference chairs/journal editors may add this requirement explicitly when when publishing a call for papers. Publishers and repository administrators
 % \katznote{I don't know what the name is for people who create and run repositories} \on{repository administrators?}
@@ -290,7 +290,7 @@ need to create mechanisms for all products to includes citations as part of thei
 % \on{was: I will include my software activities in my CV and in activity reports, and ask where they should go if they are not present. I will discuss and highlight these contributions when reviewing CVs \etc}
 
 \emph{Background.}
-Funding agencies such as the US NSF are beginning to recognize research products such as software just as they do for publications. This acknowledges the contributions of software as a primary research product. Including these in CVs and reports as well as requiring them from others is an important step towards normalizing them as having similar stature to publications. 
+Funding agencies such as the US NSF are beginning to recognize research products such as software just as they do for publications. This acknowledges the contributions of software as a primary research product. Including these in CVs and reports as well as requiring them from others is an important step towards normalizing them as having similar stature to publications.
 
 The guidelines used for promotion and evaluation are important because they specify what is valued and thus shape the activities that people undertake. Ultimately promotion also determines who continues to be employed and thus whether people can continue to make software contributions at all. Since promotion guidelines are written by the powerful within institutions, many people feel they can have little or no impact on them; even the powerful feel that they cannot deviate from how these are defined in similar institutions, leading to a stalemate that prevents change.
 Nevertheless, we are all evaluated and we evaluate others, and we can influence these processes when we participate in these evaluations.
@@ -312,7 +312,7 @@ Also, junior researchers may be viewed as wasting effort, accused of padding the
 \item When participating in processes where I am evaluated, I will list my software contributions.
 If it is not clear how this may be done, I will explicitly ask where software contributions should be listed in the materials.
 \item If I sit on a review panel, I will encourage those up for promotion to list their software contributions and, where relevant, bring them up in discussions
-\item When I am involved in writing guidelines for evaluation, even within my research group or for students, I will include guidance about the type of software contributions I believe add value to science. 
+\item When I am involved in writing guidelines for evaluation, even within my research group or for students, I will include guidance about the type of software contributions I believe add value to science.
 \end{itemize}
 
 \emph{Who else needs to act?}
@@ -325,27 +325,27 @@ These actions should help to drive change in the university at higher levels and
 \paragraph{I will develop software as open source from the start, whenever possible, and I will contribute to sustaining software I use and rely on.}
 
 \emph{Background.}
-Some projects are intended to be long-lived and widely usable; others are intended only to create outputs for a single research project or even paper. Potential users should be aware of the author's intentions for a project before deciding to rely on it.  
+Some projects are intended to be long-lived and widely usable; others are intended only to create outputs for a single research project or even paper. Potential users should be aware of the author's intentions for a project before deciding to rely on it.
 
 Initially developing software in closed fora often loses the benefits of open source processes. This includes allowing others to determine whom to credit and follow up regarding technical details. Open access allows developers to adapt code to related contexts. It allows a community of users to share the costs of sustaining the resource. Users can determine how well it fits their needs by inspecting details that are not visible from the external interfaces. In contexts where the quality of the software is critical, open access facilitates verification of correctness. Similarly, security flaws can be identified by a larger group, enabling earlier resolution.
 
-Starting as you intend to continue is important, because projects have their own momentum; it is far more difficult to change once you have established practices and infrastructure. Indeed transitioning from a typical, co-located, PI-directed software development process to an open process involves substantial organizational change across at least three dimensions (i) Governance and Leadership, (ii) Collaboration infrastructure, and (iii) Contribution processes \cite{howison2014collaboration}.
+Starting as you intend to continue is important, because projects have their own momentum; it is far more difficult to change once you have established practices and infrastructure. Indeed transitioning from a typical, co-located, PI-directed software development process to an open process involves substantial organizational change across at least three dimensions (i) Governance and Leadership, (ii) Collaboration infrastructure, and (iii) Contribution processes~\cite{howison2014collaboration}.
 
 A commonly used argument for not releasing the code associated with a research paper into the wild is that the code is ``bad'' and the scientist will be judged negatively based on the poor quality of the code.
 %\meh{Dismissive, uncharitable comments about existing code, as well as identifying a component that is ``easy'' to ``just'' do in some particular way.}
 Dismissive, uncharitable comments about existing code can lead to online shaming, creating and perpetuating a negative attitude towards publishing code developed by scientists.
-% There is an issue of shame in the research software community which often prevents researchers from releasing the code that facilitated their research. 
+% There is an issue of shame in the research software community which often prevents researchers from releasing the code that facilitated their research.
 This in turn leads to a body of computational research that is extremely difficult to reproduce. It is also wasteful of resources since it costs a great deal of money to develop that software. It takes longer to build on such research since the foundations need to be reimplemented.
 
 A very large movement behind this openness is already well underway and has resulted in more than one manifesto~\cite{barba_reproducibility_2012,alex_holcombe_open_2011}.
 % \footnote{\url{http://lorenabarba.com/gallery/reproducibility-pi-manifesto/}, \url{http://www.openaccesspledge.com/}}
 
 \emph{Contradictions or concerns.}
-We want scientists to release their code, or even better develop their code completely in the open, however, we criticize them for releasing code that does not comply to a high standard of quality. 
+We want scientists to release their code, or even better develop their code completely in the open, however, we criticize them for releasing code that does not comply to a high standard of quality.
 
 Some institutions prohibit release of software under a FOSS license without IP review. This can often be addressed by planning and stating the code will be open sourced at the time funding is sought, \ie in the proposal itself.
 %\meh{When a project is initiated, this basis allows such reviews to be addressed in the absence of a concrete product.} \on{obscure}
-%Software can evolve from one state to the other as its utility is recognized by others, so these decisions may need to be revisited. 
+%Software can evolve from one state to the other as its utility is recognized by others, so these decisions may need to be revisited.
 
 There is literature on success in open source arguing that projects should start with a (nearly) working software application, not just ideas and plans~\cite{senyard2004have}. One possible solution here is to use infrastructure that can be easily opened, such as private repositories on github, but carefully choose when to flip that switch. That does not, however, change practices such as governance.
 
@@ -355,19 +355,19 @@ There is literature on success in open source arguing that projects should start
 
 \emph{What actions are needed?}
 Promote a culture acknowledging that any code contribution attached to a research paper that makes it possible to reproduce research results is valuable, regardless of the quality of the code. Once the code is freely available its quality can be improved.
-Provide, at the university level, services for code review that scientists wanting to release their code can use. This can increase both their confidence and their technical skills. 
+Provide, at the university level, services for code review that scientists wanting to release their code can use. This can increase both their confidence and their technical skills.
 
-%A framework for understanding different kinds of software would be useful, along with better ways to evaluate the likely utility of a piece of software. 
+%A framework for understanding different kinds of software would be useful, along with better ways to evaluate the likely utility of a piece of software.
 
 Establish a specific plan for releasing scientific source code from day one of development. This should include:
 \begin{itemize}
 \item an initial specification of the software license, compliant with the sponsoring institution's IP policies;
 \item a plan for relicensing in the future should the business environment surrounding a project's development change;
 \item a plan for identifying and mitigating license conflicts with software dependencies that may be introduced into the current product;
-\item a policy for applying this software licensing plan uniformly to all (or as many as allowable) projects under a specific manager's supervision. 
+\item a policy for applying this software licensing plan uniformly to all (or as many as allowable) projects under a specific manager's supervision.
 \end{itemize}
 
-Give regular talks, seminars and courses on releasing software to the public. 
+Give regular talks, seminars and courses on releasing software to the public.
 Sit alongside individual researchers and take them through how to use github (say) to actually make their code public for the first time.
 
 Whenever a paper is published within your institution that explicitly mentions the development of code, speak to the author about releasing the software behind it. Write and promote articles giving explicit examples of good practice.
@@ -388,12 +388,12 @@ By necessity, software is often developed with a somewhat abstracted sense of th
 \emph{Contradictions or concerns.}
 Evaluating whether a solution is appropriate is time-intensive, and end users may not be equipped to do so. Additional expertise is needed, but the person offering that expertise bears the burden of communicating effectively to the end users. This takes time, energy, and its own skill set.
 
-It is hard enough to get funding to support primary software development. Researchers under any sort of financial pressure may have difficulty prioritizing such support over new development and innovation. 
+It is hard enough to get funding to support primary software development. Researchers under any sort of financial pressure may have difficulty prioritizing such support over new development and innovation.
 
 \emph{What actions are needed?}
 If I am in the position of assessing the context or suggesting a solution, I will not only focus on the things I am most excited about (the shiny new tool) but make an effort to hear what the scientists/users are excited about, and ways the best parts of existing process and enthusiasm can be channelled into sustained productivity.
 
-When a software solution is proffered to a research community, there should be an explicit plan to provide sustained human support for it. This can include a statement that no such support can be provided, but the expectation should be explicitly set for the end users rather than leaving them to struggle. This allows them to incorporate support availability into their evaluation of the appropriateness of the solution. 
+When a software solution is proffered to a research community, there should be an explicit plan to provide sustained human support for it. This can include a statement that no such support can be provided, but the expectation should be explicitly set for the end users rather than leaving them to struggle. This allows them to incorporate support availability into their evaluation of the appropriateness of the solution.
 
 %One should create low-cost opportunities to re-evaluate the appropriateness of the solution.
 %No users of SE solutions should be saying things like, ``I am using XXX because Bob wants me to.''
@@ -452,8 +452,8 @@ The research areas outlined below are concerned with gaining a deeper understand
 % --------------------------------------------------
 \subsection{Quantifying the availability of scientific software}
 
-Existing work has included literature surveys of particular publication venues \todo{need references} \katznote{James is probably best to add these} \on{James -- please help!}
-that aim to provide some measure of how much software is available. However, there is limited consensus on what constitutes code that is expected to be released, and the level of scrutiny with which to evaluate a particular publication. These limitations make comparisons across venues difficult, let alone fields or disciplines. Such comparisons constitute a component of understanding the change which we try to bring about with improved tools and advocacy programs. 
+Existing work has included literature surveys of particular publication venues
+that aim to provide some measure of how much software is available~\cite{howison_software_2015,duck_survey_2016,momcheva_software_2015}. However, there is limited consensus on what constitutes code that is expected to be released, and the level of scrutiny with which to evaluate a particular publication. These limitations make comparisons across venues difficult, let alone fields or disciplines. Such comparisons constitute a component of understanding the change which we try to bring about with improved tools and advocacy programs.
 
 Specific questions to be addressed:
 \begin{itemize}
@@ -476,7 +476,7 @@ Claims of cost of hidden software or infrastructure maintenance remain (often) a
 \item HCI/design research: Understand user intention to support discoverability, explore opportunities for machine learning application
 \item Instrumentation of existing infrastructure (github), or use of annotation infrastructure such as hypothes.is, json-ld
 \item What is the cost of code that is undiscoverable, unavailable, or unrunnable?
-\item How much does it cost to support / not support software that others use? 
+\item How much does it cost to support / not support software that others use?
 \item Map out existing models to share the costs, to inform recommendations
 \end{itemize}
 
@@ -489,13 +489,14 @@ Reproducibility of scientific experiments with major computational components re
 The following specific questions need to be addressed:
 
 \begin{itemize}
-\item What we would like to have as a research environment for reproducibility, including  software and data, 10 years from now? 
-\item How to design and implement a virtual machine for forever-sustainable executable environments? 
+\item What we would like to have as a research environment for reproducibility, including  software and data, 10 years from now?
+\item How to design and implement a virtual machine for forever-sustainable executable environments?
 \item How to deal with software legacy in the long term, in particular:
     \begin{itemize}
     \item De-optimization, porting, refactoring of academic software?
     \item Translation of legacy data formats?
     \end{itemize}
+\item How/when to transition grant funded scientific software projects to alternative models of support including commercialization or building true peer production open source ocmmunities in which those using the software contribute enough time to keep the software scientifically useful~\cite{howison2015understanding,howison_sustaining_2015,bietz_sustaining_2012}
 \end{itemize}
 
 \on{James, please help!}
@@ -535,7 +536,7 @@ For the vision of software citation to be realized, authors need to be able to s
 
 There are three broadly used bibliographic toolchains:
 \begin{enumerate}
-\item bibtex, 
+\item bibtex,
 \item citation style language (Zotero | Papers | Mendeley \ra citeproc \ra Word | pandoc | Pages),  and \item Endnote.
 \end{enumerate}
 Note, though, that there are many other systems.%
@@ -561,7 +562,7 @@ One additional necessary element would be tool support to make it easy to get ap
 
 With better metadata about projects we can pursue systems that provide insight into the scientific software ecosystem.
 Example efforts currently include Depsy\footnote{\url{http://depsy.org}, \url{http://blog.impactstory.org/introducing-depsy/}}
-%\todo{reference (Piwowar and Priem) --- can't find this. Is it a paper?} \katznote{I don't think there's a paper - there's a blog: \url{http://blog.impactstory.org/introducing-depsy/} and a draft paper: \url{https://github.com/Impactstory/depsy-research/blob/master/introducing_depsy.md}} 
+%\todo{reference (Piwowar and Priem) --- can't find this. Is it a paper?} \katznote{I don't think there's a paper - there's a blog: \url{http://blog.impactstory.org/introducing-depsy/} and a draft paper: \url{https://github.com/Impactstory/depsy-research/blob/master/introducing_depsy.md}}
 and the Scientific Software Network Map\footnote{%\url{http://scisoft-net-map.isri.cmu.edu}
 \url{http://scisoft-net-map.isri.cmu.edu:7777}}
 \cite{mcconahy2012techniques,howison2015understanding}.
@@ -575,7 +576,7 @@ Specific questions in the area of ecosystem analysis and metadata are:
 \item Metadata: what motivates projects to generate and maintain metadata?
 \item How well can software be observed in the literature?
 \item What are the moments in which participants are well motivated (\eg people are motivated just after publishing a new paper to add it to their request for citation).
-\item Can we motivate software developers to improve metadata by pushing 
+\item Can we motivate software developers to improve metadata by pushing
 \item Metrics of software: how can quantify and measure code meaningfully
 \end{itemize}
 
@@ -638,11 +639,11 @@ The open science and research software communities have been very active in crea
 
 Some such manifestos have calls for improved software and bibliography metadata for persistent citation of software. These include both the FAIR guiding principles and the Force11 Software Citation Principles and the Science Code Manifesto \cite{wilkinson_fair_2016,arfon_m._smith_software_2016,nick_barnes_science_2013}.
 
-Other topics addressed by such manifestos include emphasis on access to source code, which was also a topic of interest in this workshop. Manifestos that address this topic include the Science Code Manifesto, and the Karlskrona Manifesto for Sustainability Design. 
+Other topics addressed by such manifestos include emphasis on access to source code, which was also a topic of interest in this workshop. Manifestos that address this topic include the Science Code Manifesto, and the Karlskrona Manifesto for Sustainability Design.
 
 Emphasis on grass-roots support and institutional change toward visibility of the research contributions of software and software engineers are also addressed by many of these manifestors. A domain-specific manifesto, ``Astronomical Software Wants To Be Free: A Manifesto,'' is a key example of a call to arms for that community to value the software underlying their science \cite{weiner_astronomical_2009}. Broader calls for this community action are included in the  UK RSE objectives and the Science Code Manifesto.
 
-Many are more focused on the practice of reproducible software development for research. These include the Open Science Peer Review Oath, the Reproducibility PI Manifesto, the GeoScience Paper of the Future Initiative, and the FAIR principles. 
+Many are more focused on the practice of reproducible software development for research. These include the Open Science Peer Review Oath, the Reproducibility PI Manifesto, the GeoScience Paper of the Future Initiative, and the FAIR principles.
 The Journal of the American Statistical Association (JASA) will now insist on the availability of code and data during the review of manuscripts \cite{Baker2016}.
 
 % ----------
@@ -653,7 +654,7 @@ It does cover Code, Copyright, Citation, Credit, and Curation.
 The principles do not seem to be in conflict with our discussions this week
 
 % ----------
-\manifesto{Force 11 Software Citation principles}~\cite{arfon_m._smith_software_2016}\footnote{draft at 
+\manifesto{Force 11 Software Citation principles}~\cite{arfon_m._smith_software_2016}\footnote{draft at
 \url{https://www.force11.org/software-citation-principles}}
 emphasize persistence and clarity.
 
@@ -672,7 +673,7 @@ includes a broad definition of sustainability. In the technical sense, this is a
 
 % ----------
 \manifesto{Astronomical Software Wants To Be Free: A Manifesto}~\cite{weiner_astronomical_2009}\footnote{\url{http://arxiv.org/abs/0903.3971}}
-emphasizes various principles that would improve the visibility and esteem of software within astronomy. It emphasizes structural incentives and adoption of values which recognize this. 
+emphasizes various principles that would improve the visibility and esteem of software within astronomy. It emphasizes structural incentives and adoption of values which recognize this.
 
 % ----------
 \manifesto{UK RSE}~\cite{rse_conference_2016_what_2016}\footnote{\url{http://www.rse.ac.uk/who.html}}
